--- a/charts/geth/templates/service.yaml
+++ b/charts/geth/templates/service.yaml
@@ -6,11 +6,12 @@ metadata:
     {{- include "geth.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
-    - port: {{ .Values.service.rpcPort }}
-      targetPort: rpc
+    - port: {{ .Values.service.port }}
+      targetPort: http
       protocol: TCP
-      name: rpc
+      name: http
     - port: {{ .Values.service.wsPort }}
       targetPort: ws
       protocol: TCP
