--- a/charts/geth/values.yaml
+++ b/charts/geth/values.yaml
@@ -4,11 +4,18 @@
 
 network: goerli
 
-rpc:
+http:
   enabled: true
+  addr: 0.0.0.0
+  corsdomain: '*'
+  vhosts: '*'
 
 ws:
   enabled: true
+  addr: 0.0.0.0
+  origins: '*'
+
+extraArgs: []
 
 persistence:
   size: 128Gi
@@ -48,7 +55,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  rpcPort: 8545
+  port: 8545
   wsPort: 8546
 
 ingress:
@@ -66,7 +73,7 @@ ingress:
 
 resources:
   limits:
-    cpu: 1
+    cpu: 1.5
     memory: 6Gi
   requests:
     cpu: 1
@@ -83,7 +90,7 @@ nodeSelector: {}
 
 tolerations: # []
 - key: eth
-  value: geth
+  operator: Exists
   effect: NoSchedule
 
 affinity: {}
