--- a/charts/prysm/templates/service.yaml
+++ b/charts/prysm/templates/service.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "prysm.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
