fix(hlf-ca): Fix the HTTPS health check

--- a/charts/hlf-ca/templates/deployment.yaml
+++ b/charts/hlf-ca/templates/deployment.yaml
@@ -141,10 +141,16 @@ spec:
           livenessProbe:
             httpGet:
               path: /cainfo
+              {{- if .Values.config.tls.enabled }}
+              scheme: HTTPS
+              {{- end }}
               port: 7054
           readinessProbe:
             httpGet:
               path: /cainfo
+              {{- if .Values.config.tls.enabled }}
+              scheme: HTTPS
+              {{- end }}
               port: 7054             
           volumeMounts:
             - name: data
