Add admin role to identity config

--- a/charts/hlf-ca/templates/configmap--config.yaml
+++ b/charts/hlf-ca/templates/configmap--config.yaml
@@ -92,8 +92,8 @@ data:
            type: client
            affiliation: ""
            attrs:
-              hf.Registrar.Roles: "peer,orderer,client,user"
-              hf.Registrar.DelegateRoles: "peer,orderer,client,user"
+              hf.Registrar.Roles: "peer,orderer,client,user,admin"
+              hf.Registrar.DelegateRoles: "peer,orderer,client,user,admin"
               hf.Revoker: true
               hf.IntermediateCA: true
               hf.GenCRL: true
