--- a/charts/hlf-peer/templates/deployment.yaml
+++ b/charts/hlf-peer/templates/deployment.yaml
@@ -118,39 +118,10 @@ spec:
               - /var/hyperledger
             initialDelaySeconds: 15
           command:
-            - bash
-            - -c
-            - |
-              # To avoid having separate secrets for CouchDB and HLF
-              export CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=$COUCHDB_USER
-              export CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=$COUCHDB_PASSWORD
-
-              while [ ! -d /var/hyperledger/admin_msp/admincerts ] || [ -z "$(ls -A /var/hyperledger/admin_msp/admincerts)" ];
-              do
-                echo "\033[0;31m /var/hyperledger/admin_msp/admincerts must contain Peer admin certificates files \033[0m"
-                sleep 60
-              done
-
-              while [ ! -d ${CORE_PEER_MSPCONFIGPATH}/signcerts ];
-              do
-                echo "\033[0;31m ${CORE_PEER_MSPCONFIGPATH}/signcerts directory must exist \033[0m"
-                sleep 60
-              done
-
-              if [ ! -d ${FABRIC_CFG_PATH} ]
-              then
-                mkdir -p ${FABRIC_CFG_PATH}
-                cp -r /etc/hyperledger/fabric/core.yaml ${FABRIC_CFG_PATH}
-                ls ${FABRIC_CFG_PATH}
-              fi
-
-              if [ $CORE_PEER_TLS_CLIENTAUTHREQUIRED ]
-              then
-                export CORE_PEER_TLS_CLIENTROOTCAS_FILES=$(ls -d $CORE_PEER_TLS_CLIENTROOTCAS_FILES)
-              fi
-
-              echo ">\033[0;35m peer node start \033[0m"
-              peer node start
+            - peer
+          args:
+            - node
+            - start
           envFrom:
             {{- if eq .Values.peer.databaseType "CouchDB" }}
             - secretRef:
